<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="careerdost.yogafitness.activities.MainActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:id="@+id/mainGrid"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:columnCount="2"
            android:rowCount="3">

            <android.support.v7.widget.CardView
                android:id="@+id/cardExercises"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_margin="7dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/exercisesIcon"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/exercises" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/yoga_exercises"
                        android:textColor="#8c8c8c"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardDay30"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/day30Icon"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/days30" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/yoga_30_days"
                        android:textColor="#8c8c8c"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardPrograms"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/programsIcon"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/yogaprograms" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/yoga_programs"
                        android:textColor="#8c8c8c"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardInstruct"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/instructIcon"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/instruct" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/instruct"
                        android:textColor="#8c8c8c"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardTips"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/tipsIcon"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/tipstricks" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/yoga_tips"
                        android:textColor="#8c8c8c"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardReminder"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/reminderIcon"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/yogaextras" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/yoga_extras"
                        android:textColor="#8c8c8c"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </GridLayout>
    </ScrollView>
</RelativeLayout>