<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.YgInstruct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <include
            android:id="@+id/appBar"
            layout="@layout/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/ygYogaTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:padding="4dp"
            android:text="@string/yoga_ins"
            android:textSize="20sp" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewExe"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/ygExercisePose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitCenter"
                android:src="@drawable/empty_photo" />

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/banner_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            app:cardElevation="8dp">

            <Button
                android:id="@+id/btn_share_instruct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@color/colorBlue"
                android:fontFamily="monospace"
                android:text="@string/share"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:targetApi="jelly_bean" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewInstruct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/ygExerciseInstruct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>